k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ydl
  namespace: ydl
spec:
  selector:
    app: your-dl-server
  ports:
    - name: http
      targetPort: 8080  # port the container accepts traffic on
      port: 8080  # port other pods use to access the Service
      protocol: TCP
