k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-dl-server
  namespace: your-dl-server
  labels:
    app: your-dl-server
spec:
  selector:
    app: your-dl-server
  ports:
    - name: http
      targetPort: 8080  # port the container accepts traffic on
      port: 443  # port other pods use to access the Service
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: your-dl-server-ingress
  namespace: your-dl-server
  annotations:
#    nginx.ingress.kubernetes.io/auth-tls-secret: tls-secret  # https://kubernetes.github.io/ingress-nginx/user-guide/tls/
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: your-dl-server
spec:
  tls:
    - hosts:
      - localhost
      secretName: tls-secret
  rules:
    - host: localhost
      http:
        paths:
          - path: "/"
            backend:
              serviceName: your-dl-server
              servicePort: 443
---
