k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ydl-ingress
  namespace: ydl
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/ydl"
            backend:
              service:
                name: service-ydl
                port: 
                  number: 8080
